2003-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_volume_up1_activate),
	(on_volume_down1_activate), (totem_action_remote),
	(totem_action_handle_key), (totem_action_handle_scroll),
	(totem_action_handle_volume_scroll), (on_volume_scroll_event),
	(totem_callback_connect): add mouse-wheel support to all the widgets
	that could (the sliders)

2003-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (bacon_video_widget_can_get_frames),
	(bacon_video_widget_get_current_frame): Make it possible to take
	screenshots of visual plugins. This requires xine-lib beta8. People
	filing bugs because they use an older version owe me 50 quid.

2003-03-06  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem.c: (on_recent_file_activate): removed debug

2003-03-06  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (bacon_video_widget_can_get_frames):
	changes so we can take screenshots of everything that's got a video,
	we can now screenshot vis plugins, and oh fuck do they look nice ;)

2003-03-06  Anders Carlsson <andersca@codefactory.se>

	reviewed by: Bastien Nocera <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (on_always_on_top1_activate),
	(totem_callback_connect):
	* src/video-utils.c: (gdk_wmspec_change_state),
	(totem_gdk_window_set_always_on_top):
	* src/video-utils.h: Add support for always-on-top for the main window

2003-03-05  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added "pt" to ALL_LINGUAS.

2003-03-05  Bastien Nocera  <hadess@hadess.net>

	* src/video-utils.c: (yv12torgb): fix warning

2003-03-05  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* src/bacon-video-widget.c: (bacon_video_widget_get_current_frame):
	* src/video-utils.c: (yuy2toyv12), (yv12torgb):
	* src/video-utils.h: simplified the screenshot code and moved the
	colour conversion functions to video-utils.[ch], colour conversion
	comes from Guenter Bartsch <guenter@users.sourceforge.net>
