@@ -1,5 +1,10 @@
 2003-03-10  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c: (totem_action_fullscreen_toggle): set the window on top
+	again when coming back from fullscreen
+
+2003-03-10  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem.c: (on_volume_up1_activate),
 	(on_volume_down1_activate), (totem_action_remote),
 	(totem_action_handle_key), (totem_action_handle_scroll),
